--- a/pageN/index.html
+++ b/pageN/index.html
@@ -1,96 +1,102 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
+<head>
+    <meta charset=utf-8>
+
     <script language="javascript" type="text/javascript" src="https://cdn.jsdelivr.net/npm/p5@1.1.4/lib/p5.min.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
-    <script language="javascript" type="text/javascript" src="libraries/rita-full.js"></script>
-
+    <!-- <script language="javascript" type="text/javascript" src="libraries/rita-full.js"></script> -->
     <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
 
-  <body>
 
-    <p id="output" style="font-family: Mario" ></p>
+
+
+  <title>EAP</title>
+</head>
+
+<body>
+  <main id="main">
 
     <div class="pageC">
-      <a href="../pageC/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
-    <div class="pageE">
-      <a href="../pageE/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
-    <div class="pageF">
-      <a href="../pageF/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
-    <div class="pageG">
-      <a href="../pageG/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
-    <div class="pageH">
-      <a href="../pageH/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
-    <div class="pageI">
-      <a href="../pageI/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
-    <div class="pageJ">
-      <a href="../pageJ/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
-    <div class="pageK">
-      <a href="../pageK/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
-    <div class="pageL">
-      <a href="../pageL/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
-    <div class="pageM">
-      <a href="../pageM/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
+    <a href="../pageC/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
+  <div class="pageE">
+    <a href="../pageE/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
+  <div class="pageF">
+    <a href="../pageF/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
+  <div class="pageG">
+    <a href="../pageG/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
+  <div class="pageH">
+    <a href="../pageH/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
+  <div class="pageI">
+    <a href="../pageI/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
+  <div class="pageJ">
+    <a href="../pageJ/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
+  <div class="pageK">
+    <a href="../pageK/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
+  <div class="pageL">
+    <a href="../pageL/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
+  <div class="pageM">
+    <a href="../pageM/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
 
 
-    <div class="pageO">
-      <a href="../pageO/index.html"
-      style="color: #FFF;opacity: 0;
-      text-decoration:none;
-      cursor:zoom-in;"
-        >--------------------------------------------------------------------------------</a>
-    </div>
+  <div class="pageO">
+    <a href="../pageO/index.html"
+    style="color: #FFF;opacity: 0;
+    text-decoration:none;
+    cursor:zoom-in;"
+      >--------------------------------------------------------------------------------</a>
+  </div>
 
-  </body>
+</body>
+
 </html>
