--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
 
 <div class="pageB">
   <a href="pagec/index.html"
-  style="color: #f5430c;
+  style= "color: #f5430c;
   text-decoration:none;
+  font-family: Mario;
   cursor:crosshair;"
-    >the black cat</a>
+  <p>Edgar Allan Poe - The Black Cat (1845)</p></a>
 </div>
 
 
